Removing the calculated dates and adding AI tooling

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -31,7 +31,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			<JobEntry
 				title="Staff Software Engineer"
 				company="Open Universities Australia"
-				period="October 2021 - Present (3 years 7 months)"
+				period="October 2021 - Present"
 				responsibilities={[
 					'Led the initiation, design, and successful delivery of an identity system using Auth0. Overcame intricate challenges in integrating with a legacy Sitecore application, such as implementing impersonation, federated security with OKTA, and seamless migration of existing users.',
 					'Implemented Typescript node tooling for efficient provisioning of Auth0 tenants.',
@@ -59,7 +59,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			<JobEntry
 				title="Senior Software Engineer"
 				company="Open Universities Australia"
-				period="July 2020 - October 2021 (1 year 4 months)"
+				period="July 2020 - October 2021"
 				responsibilities={[
 					'Pioneered a transformative project by initiating a proof of concept, architecting, and implementing an entirely new search experience tailored for students and new visitors.',
 					'Leveraged Next.js and server-side rendering to establish a robust SEO presence for our revamped marketplace, seamlessly replacing a legacy Sitecore solution.',
@@ -72,7 +72,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			<JobEntry
 				title="Senior Software Engineer"
 				company="SEEK"
-				period="February 2019 - July 2020 (1 year 6 months)"
+				period="February 2019 - July 2020"
 				responsibilities={[
 					"Developed a range of backend and front-end services to support talent search systems for SME's and Recruiters.",
 					'Utilized AWS cloud services including Elastic Beanstalk, ECS, CloudFront, SQS, SNS, CloudFormation, and Lambdas.',
@@ -84,7 +84,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			<JobEntry
 				title="Senior Software Engineer"
 				company="Apthletic"
-				period="April 2018 - February 2019 (11 months)"
+				period="April 2018 - February 2019"
 				responsibilities={[
 					'Designed and built the Rest API and database (Postgres) for mobile and web using Java with Jersey Framework.',
 					'Developed front end web application built with React (Typescript) using Sagas.',
@@ -97,7 +97,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			<JobEntry
 				title="Senior Software Developer"
 				company="MYOB"
-				period="September 2016 - April 2018 (1 year 8 months)"
+				period="September 2016 - April 2018"
 				responsibilities={[
 					'Developed large scale event driven systems to serve real time dashboard data to accounting firms and partners.',
 					'Built systems mostly in Node with JavaScript and Flow type checking.',
@@ -110,7 +110,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			<JobEntry
 				title="Senior .Net Developer"
 				company="TAL Life"
-				period="April 2014 - September 2016 (2 years 6 months)"
+				period="April 2014 - September 2016"
 				responsibilities={[
 					"Tech Lead for the development of a new website that interacted with backend services and MDM's, allowing users to login for self-service.",
 					'Delivered a revamped InsuranceLine website using Sitecore 7.2 MVC, Angular JS, Web API and Mongo DB.',
@@ -123,7 +123,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			<JobEntry
 				title="Senior .Net Developer and Scrum Master"
 				company="Unified Healthcare Group"
-				period="February 2013 - May 2014 (1 year 4 months)"
+				period="February 2013 - May 2014"
 				responsibilities={[
 					'Developed modern single page application using twitter bootstrap, knockout, jQuery, and Asp.Net MVC 4.',
 					'Implemented full continuous integration using Octopus Deploy and Jenkins.',
@@ -135,7 +135,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			<JobEntry
 				title=".Net Technical Lead"
 				company="eNett"
-				period="September 2009 - February 2013 (3 years 6 months)"
+				period="September 2009 - February 2013"
 				responsibilities={[
 					'Started as Senior developer and progressed to technical lead in an Agile scrum environment.',
 					'Set up automated deployment using Octopus Deploy with TFS for wide range of applications.',
@@ -148,7 +148,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			<JobEntry
 				title=".Net Developer"
 				company="Object Next Software"
-				period="January 2009 - September 2009 (9 months)"
+				period="January 2009 - September 2009"
 				responsibilities={[
 					'C# 2.0 and 3.5 .Net framework development.',
 					'Implemented best practices including repository patterns and Model View Presenter spanning Windows and web.',
@@ -160,7 +160,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			<JobEntry
 				title=".Net Developer"
 				company="Mainfreight (Pelican Solutions Software)"
-				period="May 2008 - January 2009 (9 months)"
+				period="May 2008 - January 2009"
 				responsibilities={[
 					'Delivered new features to the flagship Windows application using C# 2.0 .Net framework.',
 					'Integrated the platform using EDI Messaging and XML communication with government departments.',
@@ -173,7 +173,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			<JobEntry
 				title="Junior .Net Developer"
 				company="FTI Consulting"
-				period="January 2007 - May 2008 (1 year 5 months)"
+				period="January 2007 - May 2008"
 				responsibilities={[
 					'Worked in a full agile scrum environment.',
 					'Maintained existing web application using VBScript, SQL Server 2005, Visual Studio 2005.',
@@ -208,6 +208,11 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			/>
 
 			<SkillCategory
+				title="AI tooling"
+				skills={['Cluade code', 'MCP', 'GitHub Copilot', 'Cursor']}
+			/>
+
+			<SkillCategory
 				title="Cloud & Infrastructure"
 				skills={['AWS Lambda', 'AWS ECS', 'SNS', 'SQS', 'CloudFront', 'CloudFormation', 'AWS RDS']}
 			/>
@@ -221,7 +226,6 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 					'Optomizely',
 					'Launch Darkly',
 					'Github Actions',
-					'Github Copilot',
 					'Datadog',
 					'Sentry'
 				]}
