Adding more projects and fixing cv

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -204,7 +204,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 
 			<SkillCategory
 				title="Backend"
-				skills={['Node.js', 'GraphQL', 'REST API', 'Kotlin', 'Golang', 'PostgreSQL', 'Golang']}
+				skills={['Node.js', 'GraphQL', 'Kotlin', 'Golang', 'PostgreSQL', 'SQL server', 'Hono']}
 			/>
 
 			<SkillCategory
