Updating SES melbourne project

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -15,10 +15,11 @@ const projects = [
 	},
 	{
 		title: 'SES Melbourne',
-		description: `A clean website and blog for a local business in Melbourne, Australia. 
-			The website is built with Next.js and Sanity CMS. 
-			It is a simple website that showcases the services offered by the business.`,
-		tags: ['Nextjs', 'Tailwind', 'Sanity CMS', 'Tailwind', 'Vercel'],
+		description: `A clean website and blog for a local business in Melbourne, Australia 
+			that showcases their services. 
+			The website is built with Next.js using server side rendering to help with SEO. Content
+			is managed with Sanity CMS, which allows the client to easily update the content.`,
+		tags: ['Nextjs', 'Sanity CMS', 'Tailwind', 'Vercel'],
 		projectUrl: 'https://www.sesmelbourne.com.au/',
 		sourceCodeUrl: 'https://github.com/dejanvasic85/ses-next'
 	}
