Preparing the site to be published

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,7 +6,8 @@ const allPosts = await Astro.glob('./*.mdx');
 <Layout title="Blog - Dejan Vasic">
 	<main class="container">
 		<h1>Blog</h1>
-		<p class="intro">Thoughts on software engineering, leadership, and technology.</p>
+		<p>Coming soon... under construction.</p>
+		<!-- <p class="intro">Thoughts on software engineering, leadership, and technology.</p>
 		<div class="posts">
 			{
 				allPosts.map((post) => (
@@ -26,7 +27,7 @@ const allPosts = await Astro.glob('./*.mdx');
 					</article>
 				))
 			}
-		</div>
+		</div> -->
 
 		<a href="/" class="back-link">← Back to Home</a>
 	</main>
