--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,12 @@ import Layout from '../layouts/Layout.astro';
 				<li>Solution design and architecture</li>
 			</ul>
 
-			<p>When I'm not coding, you can find me playing and coaching football ⚽</p>
+			<p>When I'm not coding, you can find me: </p>
+			<ul>
+				<li>Playing or coaching football ⚽</li>
+				<li>Running after the little ones 👶</li>
+				<li>Playing music 🎹</li>
+			</ul>
 		</div>
 
 		<nav class="page-nav">
