Adding another publication

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -42,6 +42,10 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 				]}
 				publications={[
 					{
+						title: 'From Surveys to Scorecards: System Health Evolution at OUA',
+						url: 'https://medium.com/openunisau-engineering/from-surveys-to-scorecards-system-health-evolution-at-oua-216bc989e090'
+					},
+					{
 						title: 'Using AI in Technical Interviews',
 						url: 'https://medium.com/openunisau-engineering/using-ai-in-technical-interviews-b87c4df6a773'
 					},
