--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,8 @@ interface Props {
 
 const { title = 'Dejan Vasic - Software Engineer' } = Astro.props;
 const { pathname } = Astro.url;
+
+console.log('pathname', pathname);
 ---
 
 <!doctype html>
