--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,7 @@ interface Props {
 
 const { title = 'Dejan Vasic - Software Engineer' } = Astro.props;
 const { pathname } = Astro.url;
+const normalizedPathname = pathname.replace(/\/$/, '');
 ---
 
 <!doctype html>
@@ -24,10 +25,10 @@ const { pathname } = Astro.url;
 		<header class="site-header">
 			<div class="header-container">
 				<nav class="main-nav">
-					<a href="/" class={pathname === '/' ? 'active' : ''}>Home</a>
-					<a href="/cv" class={pathname === '/cv' ? 'active' : ''}>CV</a>
-					<a href="/projects" class={pathname === '/projects' ? 'active' : ''}>Projects</a>
-					<a href="/blog" class={pathname === '/blog' ? 'active' : ''}>Blog</a>
+					<a href="/" class={normalizedPathname === '' ? 'active' : ''}>Home</a>
+					<a href="/cv" class={normalizedPathname === '/cv' ? 'active' : ''}>CV</a>
+					<a href="/projects" class={normalizedPathname === '/projects' ? 'active' : ''}>Projects</a>
+					<a href="/blog" class={normalizedPathname === '/blog' ? 'active' : ''}>Blog</a>
 				</nav>
 			</div>
 		</header>
