--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -81,7 +81,7 @@ const normalizedPathname = pathname.replace(/\/$/, '');
 		border-bottom: 3px solid var(--color-primary);
 	}
 
-	.main-nav a:hover {
+	.main-nav a:not(.active):hover {
 		border-radius: var(--radius-sm);
 		background-color: var(--color-background-alt);
 	}
