--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,7 @@ const normalizedPathname = pathname.replace(/\/$/, '');
 		<meta name="generator" content={Astro.generator} />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="sitemap" href="/sitemap-index.xml" />
 		<GoogleAnalytics />
 		<title>{title}</title>
 	</head>
