Fixing the style for the blog layout

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -44,7 +44,7 @@ const { frontmatter } = Astro.props;
 	}
 
 	.post-date {
-		color: #666;
+		color: var(--color-text-light);
 	}
 
 	.tag-container {
