--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -28,7 +28,7 @@ const { frontmatter } = Astro.props;
 			</div>
 
 			<div class="post-footer">
-				<a href="/blog" class="back-link">← Back to All Posts</a>
+				<a href="/blog" class="btn-link">← Back to All Posts</a>
 			</div>
 		</main>
 	</article>
