--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -246,7 +246,7 @@ import SkillCategory from '../components/cv/SkillCategory.astro';
 			/>
 		</Section>
 
-		<a href="/" class="back-link">← Back to Home</a>
+		<a href="/" class="btn-link" style="margin-top: 2rem;">← Back to Home</a>
 	</main>
 </Layout>
 
