--- a/src/components/cv/TimelineJobEntry.astro
+++ b/src/components/cv/TimelineJobEntry.astro
@@ -88,7 +88,7 @@ const dateRange = `${startDisplay} - ${endDisplay}`;
 					<ul class="publication-list">
 						{publications.map((pub) => (
 							<li>
-								<a href={pub.url} target="_blank" rel="noopener noreferrer">
+								<a href={pub.url} target="_blank" rel="noopener noreferrer" class="btn-link btn-link-external list">
 									{pub.title}
 								</a>
 							</li>
@@ -225,20 +225,13 @@ const dateRange = `${startDisplay} - ${endDisplay}`;
 	.publication-list {
 		list-style: none;
 		padding-left: 0;
+		display: flex;
+		flex-direction: column;
+		gap: 0.75rem;
 	}
 
 	.publication-list li {
-		margin-bottom: 0.5rem;
-	}
-
-	.publication-list a {
-		color: var(--color-text);
-		text-decoration: none;
-		font-size: 0.9rem;
-		border-bottom: 1px solid var(--color-primary);
-	}
-
-	.publication-list a:hover {
+		margin-bottom: 0;
 	}
 
 	/* Timeline line connecting dots */
