--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -43,7 +43,7 @@ const projects = [
 			}
 		</div>
 
-		<a href="/" class="back-link">← Back to Home</a>
+		<a href="/" class="btn-link" style="margin-top: 2rem;">← Back to Home</a>
 	</main>
 </Layout>
 
